--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
         <dependency>
             <groupId>io.github.vadimv</groupId>
             <artifactId>rsp</artifactId>
-            <version>1.0</version>
+            <version>2.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
